--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "mdns": "^2.3.3",
-    "signalk-client": "SignalK/signalk-js-client"
+    "@signalk/client": "^0.1.2"
   },
   "devDependencies": {}
 }
